[package]
name = "fib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust WASM fibonacci"
repository = "https://github.com/schronck/wasm-base.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
